<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81C784"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:isScrollContainer="false"
            android:orientation="vertical" >

            <ImageView android:src="@drawable/milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:layout_marginHorizontal="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anchor Maziwa App"
                android:textSize="25dp"
                android:textColor="@color/primary_dark"/>

            <LinearLayout
                android:id="@+id/ln_tmp"
                style="@style/Fill_Wrap"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/bg_ice"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    style="@style/Fill_Wrap"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/ic_user" />

                    <EditText
                        android:id="@+id/input_username"
                        style="@style/Fill_Fill"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/bg_login_text_fill"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColorHint="#aaabaf"
                        android:textSize="18sp"
                        android:textColor="@color/primary_dark"
                        />
                </LinearLayout>

                <LinearLayout
                    style="@style/Fill_Wrap"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/ic_password" />

                    <EditText
                        android:id="@+id/input_password"
                        style="@style/Fill_Fill"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/bg_login_text_fill"
                        android:hint="@string/activity_login_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColorHint="#aaabaf"
                        android:textSize="18sp"
                        android:textColor="@color/primary_dark"
                         />
                </LinearLayout>



                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    style="@style/Fill_Wrap"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/activity_login_"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>