<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ln"
        >


        <!-- Select Label -->
        <TextView
            android:id="@+id/txtroutes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Select Route"
            android:textSize="@dimen/big_text"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <!-- Spinner Dropdown -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:gravity="center"
            android:layout_span="2"
            style="@style/spinner_style"
            />

<!--farmer to bereplaced  -->
        <TextView
            android:visibility="gone"
            android:id="@+id/txtfarmers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:text="Select Farmer"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <AutoCompleteTextView
            android:visibility="gone"
            android:id="@+id/autoCompleteText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_span="2"
            android:hint="@string/searchForFarmer"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/jet"
            style="@style/search_style"
            android:dropDownHeight="100dp"
            android:inputType="textFilter|textMultiLine"
             />



    </LinearLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_below="@id/ln"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="18dp"
        android:text="@string/getWeight"/>
</RelativeLayout>
</ScrollView>